test/data/resolver/valid/carry_wins_over_unlabelled_rebind.cypher
MATCH (a:Post) WITH a MATCH (a)-[:AUTHORED]->(p) RETURN a
