test/data/resolver/invalid/list_of_edges_projection.cypher
MATCH (a:Person)-[r:AUTHORED]->(p:Post) RETURN [r] AS es
